# conan-ogg

./: .travis.yml  CMakeLists.txt  FindOgg.cmake  README.md  appveyor.yml  build.py  conanfile.py
test_package/: CMakeLists.txt  conanfile.py  testpkg.c
